--- a/leetcode/数组/中级-数组.md
+++ b/leetcode/数组/中级-数组.md
@@ -1,5 +1,20 @@
 
-[TOC]
+- [15. 3Sum [Medium]](#15-3sum-medium)
+- [73. 矩阵置零  [Medium]](#73-矩阵置零--medium)
+- [380. 常数时间插入/删除/随机取数组元素 [Medium]](#380-常数时间插入删除随机取数组元素-medium)
+- [42. 接雨水 [Hard] [*]](#42-接雨水-hard-)
+- [240. 搜索二维矩阵 II [Medium]](#240-搜索二维矩阵-ii-medium)
+- [74. 搜索二维矩阵 I [Medium]](#74-搜索二维矩阵-i-medium)
+- [54. 螺旋数组](#54-螺旋数组)
+- [59. 螺旋矩阵 II](#59-螺旋矩阵-ii)
+- [718. 最长重复子数组](#718-最长重复子数组)
+- [209. 长度最小的子数组](#209-长度最小的子数组)
+- [31. 下一个排列 [Medium]](#31-下一个排列-medium)
+- [293. 滑动窗口最大值 [Hard] *](#293-滑动窗口最大值-hard-)
+- [41.缺失的第一个正数](#41缺失的第一个正数)
+- [76. 最小覆盖子串 [Hard] * [字节/百度]](#76-最小覆盖子串-hard--字节百度)
+
+
 ### 15. 3Sum [Medium]
 - 从无序数组中找出三个非重复元素和等于目标值
 - TwoSum的升级
@@ -303,90 +318,7 @@ public:
 };
 ```
 
-### 54. 螺旋数组
-- 螺旋遍历
-  - 循环终止条件：**还有剩余的元素未遍历**
-  - 设置4个index 索引来进行
-```
-class Solution {
-public:
-    vector<int> spiralOrder(vector<vector<int>>& matrix) {
-        int row_l = 0;
-        int row_r = matrix.size() - 1;
-        int col_l = 0;
-        int col_r = matrix[0].size() - 1;
-        vector<int> ans;
-        int nums = matrix.size()* matrix[0].size();
-        while (nums >= 1) {
-            for (int i = col_l; i <= col_r && nums; i++) {
-                ans.push_back(matrix[row_l][i]);
-                nums--;
-            }
-            row_l++;
-           
-            for (int i = row_l; i <= row_r && nums; i++) {
-                ans.push_back(matrix[i][col_r]);
-                nums--;
-            }
-            cout << endl;
-            col_r--;
-            for (int i = col_r; i >= col_l && nums; i--) {
-                ans.push_back(matrix[row_r][i]);
-                nums--;
-                //cout << matrix[row_r][i] << " ";
-            }
-            row_r--;
-            for (int i = row_r; i >= row_l && nums; i--) {
-                ans.push_back(matrix[i][col_l]);
-                nums--;
-                //cout << matrix[i][col_l] << " ";
-            }
-            col_l++;
-        }
-        return ans;
-    }
-};
-```
-### 59. 螺旋矩阵 II
-- n^2个数字构成正方形，顺时针遍历
-- 循环终止条件 **num < n*n**
-```
-class Solution {
-public:
-    vector<vector<int>> generateMatrix(int n) {
-        vector<vector<int>> target(n, vector<int>(n));
-        int row_l = 0;
-        int row_r = n - 1;
-        int col_l = 0;
-        int col_r = n - 1;
-        int num = 0;
-        n = n * n;
-        while(num < n) {
-            for (int i = col_l; i <= col_r && num < n; i++) {
-                target[row_l][i] = num + 1;
-                num++;
-            }
-            row_l ++;
-            for (int i = row_l; i <= row_r && num < n; i++) {
-                target[i][col_r] = num + 1;
-                num++;
-            }
-            col_r--;
-            for (int i = col_r; i >= col_l && num < n; i--) {
-                target[row_r][i] = num + 1;
-                num++;
-            }
-            row_r--;
-            for (int i = row_r; i >= row_l && num < n; i--) {
-                target[i][col_l] = num + 1;
-                num++;
-            }
-            col_l++;
-        }
-        return target;
-    }
-};
-```
+
 ### 718. 最长重复子数组
 > 给两个整数数组 A 和 B ，返回两个数组中公共的、长度最长的子数组的长度。
 
@@ -658,10 +590,10 @@ public:
 > 一个字符串 s 、一个字符串 t 。返回 s 中涵盖 t 所有字符的最小子串。如果 s 中不存在涵盖 t 所有字符的子串，则返回空字符串 ""
 
 - 两个字符串的对比和搜索，典型的滑窗题目，设置滑窗在s中搜索符合t的区间，更新滑窗的过程并更新结果
-  - 1. 使用哈希表存储当前滑窗数据和子串t的元素分布
-  - 2. [left, right)滑窗，移动right指针，将right指针对应的元素更新到滑窗中 **当t中有该元素再更新**
-  - 3. 当滑窗和子串need的某元素分布一致，valid++，更新当前状态
-  - 4. 当valid==need.size 时得到满足条件的滑窗，记录结果，并进行滑窗更新 即**移动左指针**
+  1. 使用哈希表存储当前滑窗数据和子串t的元素分布
+  2. [left, right)滑窗，移动right指针，将right指针对应的元素更新到滑窗中 **当t中有该元素再更新**
+  3. 当滑窗和子串need的某元素分布一致，valid++，更新当前状态
+  4. 当valid==need.size 时得到满足条件的滑窗，记录结果，并进行滑窗更新 即**移动左指针**
     - 移动后，有很多细节需要注意：一个是valid的更新，一个是window数据的更新，仅当左指针的元素是need中元素时才进行上面的更新处理
 - 时间复杂度 O(N)
 
@@ -718,3 +650,41 @@ public:
 };
 ```
 
+### 128. 最长连续序列 [字节*]
+> 给定一个未排序的整数数组 nums ，找出数字连续的最长序列（不要求序列元素在原数组中连续）的长度
+
+```
+输入：nums = [100,4,200,1,3,2]
+输出：4
+解释：最长数字连续序列是 [1, 2, 3, 4]。它的长度为 4
+```
+
+- 要求时间复杂度 O(N)
+- **可以借助哈希表来实现**， 遍历每个元素是否存在连续的元素
+- 为了降低循环次数，仅当当前元素的前序值不存在时才开始搜索，**即当前元素为可能为连续段的开始元素**
+  - `s.count(p-1) == 0`
+  - 从而显著降低了时间复杂度
+
+```
+class Solution {
+public:
+    int longestConsecutive(vector<int>& nums) {
+        unordered_set<int> s;
+        for (auto p : nums) {
+            s.insert(p);
+        }
+        int ans = 0;
+        for (auto p : nums) {
+            if (!s.count(p - 1)) {                   
+                int tmp = 1;
+                while (s.count(++p)) {
+                    tmp++;
+                }
+                ans = max(ans, tmp);
+            }
+        }
+
+        return ans;
+    }
+};
+```
